force-app/main/default/objects/Load__c/fields/Record_Source__c.field-meta.xml
<CustomField>
    <fullName>Record_Source__c</fullName>
    <description>Source system where load originated</description>
    <label>Record Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loadsmart</fullName>
                <default>true</default>
                <label>Loadsmart API</label>
            </value>
            <value>
                <fullName>Data_Loader</fullName>
                <label>Data Loader (Migration)</label>
            </value>
            <value>
                <fullName>Manual</fullName>
                <label>Manual Entry</label>
            </value>
            <value>
                <fullName>EDI</fullName>
                <label>EDI Integration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>