force-app/main/default/objects/Load__c/fields/Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Name__c</fullName>
    <description>Customer reference name (max 25 chars for QB export compatibility)</description>
    <label>Reference Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>