force-app/main/default/objects/Load__c/fields/Revenue_Office__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Office__c</fullName>
    <description>KWB office responsible for the load</description>
    <label>Revenue Office</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wooster</fullName>
                <default>true</default>
                <label>Wooster, OH</label>
            </value>
            <value>
                <fullName>Columbus</fullName>
                <label>Columbus, OH</label>
            </value>
            <value>
                <fullName>Indianapolis</fullName>
                <label>Indianapolis, IN</label>
            </value>
            <value>
                <fullName>Louisville</fullName>
                <label>Louisville, KY</label>
            </value>
            <value>
                <fullName>Houston</fullName>
                <label>Houston, TX</label>
            </value>
            <value>
                <fullName>Little_Rock</fullName>
                <label>Little Rock, AR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>