force-app/main/default/objects/Load__c/fields/Revenue_Per_Mile__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Per_Mile__c</fullName>
    <description>Billing rate divided by distance miles. Metric for revenue efficiency (higher is better).</description>
    <formula>IF(OR(ISBLANK(Billing_Rate__c), ISBLANK(Distance_Miles__c), Distance_Miles__c = 0), 0, Billing_Rate__c / Distance_Miles__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Per Mile</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>