force-app/main/default/objects/Load__c/fields/Route_Geofence_Polygon__c.field-meta.xml
<CustomField>
    <fullName>Route_Geofence_Polygon__c</fullName>
    <label>Route Geofence Polygon</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>