force-app/main/default/objects/Load__c/fields/Settlement_Status__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Status__c</fullName>
    <label>Settlement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not_Settled</fullName><default>true</default><label>Not Settled</label></value>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Settled</fullName><default>false</default><label>Settled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>