force-app/main/default/objects/Load__c/fields/Shipper__c.field-meta.xml
<CustomField>
    <fullName>Shipper__c</fullName>
    <description>Shipper (Account lookup) - origin of freight</description>
    <label>Shipper</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loads (Shipper)</relationshipLabel>
    <relationshipName>Loads_Shipper</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>