force-app/main/default/objects/Load__c/fields/Shipper_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Address__c</fullName>
    <label>Shipper Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>