force-app/main/default/objects/Load__c/fields/Shipper_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Name__c</fullName>
    <label>Shipper Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>