force-app/main/default/objects/Load__c/fields/Shipper_State__c.field-meta.xml
<CustomField>
    <fullName>Shipper_State__c</fullName>
    <label>Shipper State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>