force-app/main/default/objects/Load__c/fields/Shipper_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Zip__c</fullName>
    <label>Shipper Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>