force-app/main/default/objects/Load__c/fields/SO_Number__c.field-meta.xml
<CustomField>
    <fullName>SO_Number__c</fullName>
    <description>Sales Order number from the shipper</description>
    <label>SO Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>