force-app/main/default/objects/Load__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Load lifecycle status</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>posted</fullName>
                <label>Posted</label>
            </value>
            <value>
                <fullName>quoted</fullName>
                <label>Quoted</label>
            </value>
            <value>
                <fullName>tendered</fullName>
                <label>Tendered</label>
            </value>
            <value>
                <fullName>accepted</fullName>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>dispatched</fullName>
                <label>Dispatched</label>
            </value>
            <value>
                <fullName>in_transit</fullName>
                <label>In Transit</label>
            </value>
            <value>
                <fullName>delivered</fullName>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>pod_captured</fullName>
                <label>POD Captured</label>
            </value>
            <value>
                <fullName>invoiced</fullName>
                <label>Invoiced</label>
            </value>
            <value>
                <fullName>settled</fullName>
                <label>Settled</label>
            </value>
            <value>
                <fullName>completed</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>cancelled</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>exception</fullName>
                <label>Exception</label>
            </value>
            <value>
                <fullName>disputed</fullName>
                <label>Disputed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>