force-app/main/default/objects/Load__c/fields/Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Status_Label__c</fullName>
    <description>Status label with timestamp showing when the status was last updated.</description>
    <formula>Status__c &amp; " (" &amp; TEXT(Modified_DateTime__c, "MM/dd/yyyy HH:mm") &amp; ")"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Label</label>
    <type>Text</type>
</CustomField>