force-app/main/default/objects/Load__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>Detailed reason for current status or exception (e.g., delayed pickup, carrier cancelled, etc.)</description>
    <label>Status Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>