force-app/main/default/objects/Load__c/fields/Tarp_Type__c.field-meta.xml
<CustomField>
    <fullName>Tarp_Type__c</fullName>
    <description>Tarp requirement for flatbed loads</description>
    <label>Tarp Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>None</fullName><default>true</default><label>None</label></value>
            <value><fullName>4ft</fullName><default>false</default><label>4ft Tarp</label></value>
            <value><fullName>6ft</fullName><default>false</default><label>6ft Tarp</label></value>
            <value><fullName>8ft</fullName><default>false</default><label>8ft Tarp</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>