force-app/main/default/objects/Load__c/fields/Temp_Max__c.field-meta.xml
<CustomField>
    <fullName>Temp_Max__c</fullName>
    <description>Maximum temperature requirement (Fahrenheit)</description>
    <label>Temp Max (°F)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>