force-app/main/default/objects/Load__c/fields/Temp_Min__c.field-meta.xml
<CustomField>
    <fullName>Temp_Min__c</fullName>
    <description>Minimum temperature requirement (Fahrenheit)</description>
    <label>Temp Min (°F)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>