force-app/main/default/objects/Load__c/fields/Total_Carrier_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Carrier_Cost__c</fullName>
    <description>Total cost paid to carrier (base rate + fuel surcharge)</description>
    <formula>Carrier_Rate__c + IF(ISNULL(Carrier_Fuel_Surcharge__c), 0, Carrier_Fuel_Surcharge__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Carrier Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>