force-app/main/default/objects/Load__c/fields/Total_Shipper_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Shipper_Charge__c</fullName>
    <description>Total amount charged to shipper (base rate + fuel surcharge + accessorials)</description>
    <formula>Billing_Rate__c + IF(ISNULL(Fuel_Surcharge__c), 0, Fuel_Surcharge__c) + IF(ISNULL(Accessorials__c), 0, Accessorials__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Shipper Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>