force-app/main/default/objects/Load__c/fields/Tracking_Sequence_Counter__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Sequence_Counter__c</fullName>
    <description>Counter for sequential numbering of tracking events per load (used with FOR UPDATE locking in TrackingIngestJob for concurrent processing)</description>
    <label>Tracking Sequence Counter</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>