force-app/main/default/objects/Load__c/fields/Transit_Hours__c.field-meta.xml
<CustomField>
    <fullName>Transit_Hours__c</fullName>
    <description>Estimated transit hours from pickup to delivery window</description>
    <formula>(Delivery_Window_Begin__c - Pickup_Window_Begin__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transit Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>