force-app/main/default/objects/Load__c/fields/UN_Number__c.field-meta.xml
<CustomField>
    <fullName>UN_Number__c</fullName>
    <description>UN/DOT ID number for hazardous materials (required if Hazmat_Class is populated)</description>
    <label>UN Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>