force-app/main/default/objects/Load__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>Unit of measure for the load</description>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pallets</fullName>
                <default>true</default>
                <label>Pallets</label>
            </value>
            <value>
                <fullName>Bags</fullName>
            </value>
            <value>
                <fullName>Pieces</fullName>
            </value>
            <value>
                <fullName>Boxes</fullName>
            </value>
            <value>
                <fullName>Skids</fullName>
            </value>
            <value>
                <fullName>Cartons</fullName>
            </value>
            <value>
                <fullName>Gallons</fullName>
            </value>
            <value>
                <fullName>Drums</fullName>
            </value>
            <value>
                <fullName>Cylinders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>