force-app/main/default/objects/Load__c/fields/Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Weight_lbs__c</fullName>
    <description>Total weight in pounds</description>
    <label>Weight (lbs)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>