force-app/main/default/objects/Load__c/validationRules/VAL_CarrierRate_Not_Exceeds_Shipper.validationRule-meta.xml
<ValidationRule>
    <fullName>VAL_CarrierRate_Not_Exceeds_Shipper</fullName>
    <active>true</active>
    <description>Carrier rate cannot exceed shipper/billing rate. Prevents negative margins (losing money on loads).</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(Carrier_Rate__c)),
        NOT(ISBLANK(Billing_Rate__c)),
        Carrier_Rate__c > Billing_Rate__c
    )</errorConditionFormula>
    <errorDisplayField>Carrier_Rate__c</errorDisplayField>
    <errorMessage>Carrier Rate cannot exceed Billing Rate. This would result in a negative margin (loss). Please adjust rates.</errorMessage>
</ValidationRule>