force-app/main/default/objects/Load__c/validationRules/VAL_Delivery_After_Pickup.validationRule-meta.xml
<ValidationRule>
    <fullName>VAL_Delivery_After_Pickup</fullName>
    <active>true</active>
    <description>Delivery date/time must be after pickup date/time. Ensures logical transit sequence.</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(Estimated_Delivery_DateTime__c)),
        NOT(ISBLANK(Pickup_Window_Begin__c)),
        Estimated_Delivery_DateTime__c &lt;= Pickup_Window_Begin__c
    )</errorConditionFormula>
    <errorDisplayField>Estimated_Delivery_DateTime__c</errorDisplayField>
    <errorMessage>Estimated Delivery DateTime must be after Pickup Window Begin. Please verify your dates.</errorMessage>
</ValidationRule>