force-app/main/default/objects/Load__c/validationRules/VAL_Distance_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>VAL_Distance_Greater_Than_Zero</fullName>
    <active>true</active>
    <description>Distance must be greater than zero for FTL loads. Zero distance is not valid for freight transportation.</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(Distance_Miles__c)),
        Distance_Miles__c &lt;= 0
    )</errorConditionFormula>
    <errorDisplayField>Distance_Miles__c</errorDisplayField>
    <errorMessage>Distance must be greater than zero. Please enter a valid distance in miles.</errorMessage>
</ValidationRule>