force-app/main/default/objects/Load__c/validationRules/VAL_Equipment_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VAL_Equipment_Type_Required</fullName>
    <active>true</active>
    <description>Equipment Type is required when load is posted. Carrier assignment depends on equipment availability.</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(Status__c)),
        OR(Status__c = "posted", Status__c = "quoted", Status__c = "tendered", Status__c = "accepted", Status__c = "dispatched", Status__c = "in_transit", Status__c = "delivered", Status__c = "pod_captured", Status__c = "invoiced", Status__c = "settled", Status__c = "completed"),
        ISBLANK(Equipment_Type__c)
    )</errorConditionFormula>
    <errorDisplayField>Equipment_Type__c</errorDisplayField>
    <errorMessage>Equipment Type is required for posted loads. Specify the equipment needed (e.g., Flatbed, Van, Reefer, Tank) before posting.</errorMessage>
</ValidationRule>