force-app/main/default/objects/Load__c/validationRules/VAL_Hazmat_UN_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VAL_Hazmat_UN_Number_Required</fullName>
    <active>true</active>
    <description>When Hazmat_Class is specified, UN_Number is required. Hazmat materials must have proper UN classification for compliance and safety.</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(Hazmat_Class__c)),
        ISBLANK(UN_Number__c)
    )</errorConditionFormula>
    <errorDisplayField>UN_Number__c</errorDisplayField>
    <errorMessage>UN Number is required for hazmat loads. Please specify the proper UN classification number when Hazmat Class is set.</errorMessage>
</ValidationRule>