force-app/main/default/objects/Load__c/validationRules/VAL_Pickup_Date_Not_In_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>VAL_Pickup_Date_Not_In_Past</fullName>
    <active>true</active>
    <description>Pickup date must be today or in the future.</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(Pickup_Window_Begin__c)),
        DATEVALUE(Pickup_Window_Begin__c) &lt; TODAY()
    )</errorConditionFormula>
    <errorDisplayField>Pickup_Window_Begin__c</errorDisplayField>
    <errorMessage>Pickup date cannot be in the past. Please select today or a future date.</errorMessage>
</ValidationRule>