force-app/main/default/objects/Load__c/validationRules/VAL_Rates_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>VAL_Rates_Cannot_Be_Negative</fullName>
    <active>true</active>
    <description>Billing Rate and Carrier Rate must be greater than or equal to zero. Negative rates are not allowed.</description>
    <errorConditionFormula>OR(
        AND(NOT(ISBLANK(Billing_Rate__c)), Billing_Rate__c &lt; 0),
        AND(NOT(ISBLANK(Carrier_Rate__c)), Carrier_Rate__c &lt; 0)
    )</errorConditionFormula>
    <errorDisplayField>Billing_Rate__c</errorDisplayField>
    <errorMessage>Rates cannot be negative. Both Billing Rate and Carrier Rate must be zero or greater.</errorMessage>
</ValidationRule>