force-app/main/default/objects/Load__c/validationRules/VAL_Rates_Required_When_Quoted.validationRule-meta.xml
<ValidationRule>
    <fullName>VAL_Rates_Required_When_Quoted</fullName>
    <active>true</active>
    <description>Billing Rate and Carrier Rate must be set when load transitions to quoted status or beyond. Rate information is required for freight pricing.</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(Status__c)),
        OR(Status__c = "quoted", Status__c = "tendered", Status__c = "accepted", Status__c = "dispatched", Status__c = "in_transit", Status__c = "delivered", Status__c = "pod_captured", Status__c = "invoiced", Status__c = "settled", Status__c = "completed"),
        OR(ISBLANK(Billing_Rate__c), ISBLANK(Carrier_Rate__c))
    )</errorConditionFormula>
    <errorDisplayField>Billing_Rate__c</errorDisplayField>
    <errorMessage>Both Billing Rate and Carrier Rate are required before quoting a load. Please set rates for shipper and carrier.</errorMessage>
</ValidationRule>