force-app/main/default/objects/Load__c/validationRules/VAL_Receiver_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VAL_Receiver_Required</fullName>
    <active>false</active>
    <description>Receiver is required for all loads beyond draft status. Deactivated pending Receiver__c field deployment.</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Receiver is required for posted loads.</errorMessage>
</ValidationRule>