force-app/main/default/objects/Load__c/validationRules/VAL_Shipper_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VAL_Shipper_Required</fullName>
    <active>true</active>
    <description>Shipper is required for all loads beyond draft status.</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(TEXT(Status__c))),
        NOT(ISPICKVAL(Status__c, "draft")),
        ISBLANK(Shipper__c)
    )</errorConditionFormula>
    <errorDisplayField>Shipper__c</errorDisplayField>
    <errorMessage>Shipper is required for posted loads. Please select or create a shipper account before posting.</errorMessage>
</ValidationRule>