force-app/main/default/objects/Load__c/validationRules/VAL_Weight_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>VAL_Weight_Greater_Than_Zero</fullName>
    <active>true</active>
    <description>Weight must be greater than zero. Empty loads have no commercial purpose.</description>
    <errorConditionFormula>AND(
        NOT(ISBLANK(Weight_lbs__c)),
        Weight_lbs__c &lt;= 0
    )</errorConditionFormula>
    <errorDisplayField>Weight_lbs__c</errorDisplayField>
    <errorMessage>Weight must be greater than zero. Please enter the actual cargo weight in pounds.</errorMessage>
</ValidationRule>